--- a/srcs/nginx/index.html
+++ b/srcs/nginx/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>NGINX</title>
+    <title>FT_SERVICES</title>
 </head>
     <body>
     <br>Server is online</br>
